--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.0",
-        "vlucas/phpdotenv": "^2.5"
+        "phpmailer/phpmailer": "^6.0"
     }
 }
